print line in playback, log button presses

--- a/pixilang_config.ini
+++ b/pixilang_config.ini
@@ -1,6 +1,5 @@
-
 show_virt_kbd 
-nocursor
+nocursor // hide cursor - we are keyboard nav only
 nofrecent //hide the list of the recent files/directories
 nosws //dont restore the window size
 
@@ -8,7 +7,7 @@ nosws //dont restore the window size
 pixi_containers_num 32768
 
 // zoom only needed for dev/testing on hidpi devices
-zoom 4
+zoom 3
 
 // use window size for hidpi devices to match zoom factor
 width 1280
